fix about me spacing issue

--- a/src/components/about.css
+++ b/src/components/about.css
@@ -19,6 +19,10 @@
     text-align: justify; 
 }
 
+.aboutparagraph { 
+    margin-bottom: 10px; 
+}
+
 .sticky {
     top: -1px; 
     padding-top: 1px;
